# procur_dashboard

./: .env.example  .gitignore  CLAUDE.md  MPI_Directory_by_Establishment_Number.csv  README.md  docs_gain-extraction-brief.patch  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vercel.json
Crude Assays/: Alaska_North_Slope.xlsx  Azeri_BTC.xlsx  Bakken.xlsx  Banyu_Urip.xlsx  Bonga.xlsx  CLOV.xlsx  CPC_Blend.xlsx  Cold_Lake_Blend.xlsx  Coral_Condensate.xlsx  Dalia.xlsx  Domestic_Sweet.xlsx  Ebok.xlsx  Gindungo.xlsx  Gippsland_Condensate.xlsx  Girassol.xlsx  Golden_ArrowheadV2.xlsx  Gorgon.xlsx  HOOPS.xlsx  Hebron.xlsx  Hibernia.xlsx  Hungo_Blend.xlsx  Kearl.xlsx  Kissanje_Blend.xlsx  Kutubu.xlsx  Liza_v-2.xlsx  Mondo_Blend.xlsx  Mostarda.xlsx  Payara_Gold.xlsx  Pazflor.xlsx  Qua_Iboe.xlsx  Saxi_Batuque.xlsx  Terengganu_Condensate.xlsx  Thunder_Horse.xlsx  Unity_Gold.xlsx  Usan.xlsx  Zafiro_Blend.xlsx
Crude Assays (BP)/: HLS.xls  alvheim-blend.xls  azeri-ceyhan.xls  azeri-light.xls  basrah-heavy.xls  clair.xls  clov-blend.xls  cossack.xls  culzean.xls  dalia.xls  ekofisk.xls  forties-blend.xls  galeota-mix.xls  girassol.xls  grane.xls  hungo.xls  johan-sverdrup.xls  kirkuk.xls  kissanje.xls  mondo.xls  murban.xls  north-west-shelf-condensate.xls  oman-export.xls  pazflor.xls  plutonio.xls  saturno-blend.xls  saxi-blend.xls  schiehallion.xls  skarv.xls  southern-green-canyon.xls  tangguh-condensate.xls
Crude Assays (Equinor)/: AASGARD BLEND 2025 08-ghg.xlsx  AASTA HANSTEEN 2025 05.xlsx  ALGERIAN CONDENSATE 2013 09.xlsx  ALVHEIM BLEND 2024 11.xlsx  AZERI BTC 2022 12.xlsx  AZERI LIGHT 2019 02.xlsx  BACALHAU 2026 02.xlsx  BAKKEN 2022 07.xlsx  CLOV 2016 09.xlsx  DALIA 2018 07.xlsx  DRAUGEN 2024 05.xlsx  EKOFISK 2015 06.xlsx  FORTIES BL 2025 06.xlsx  GIRASSOL 2015 02.xlsx  GOLIAT BLEND 2022 10.xlsx  GRANE BLEND 2024 10.xlsx  GUDRUN BLEND 2025 11.xlsx  GULLFAKS 2023 12.xlsx  HEBRON 2025 06.xlsx  HEIDRUN 2018 01.xlsx  HIBERNIA BLEND 2025 04.xlsx  HUNGO BLEND 2020 05.xlsx  JOHAN CASTBERG 2025 06.xlsx  JOHAN SVERDRUP 2021 04.xlsx  KISSANJE 2023 02.xlsx  MARINER BLEND 2024 06.xlsx  MARS 2025 03.xlsx  MARTIN LINGE 2025 10.xlsx  MEDANITO 2023 01.xlsx  MONDO 2024 01.xlsx  NJORD BLEND 2026 01.xlsx  NORNE BLEND 2026 02.xlsx  ORMEN LANGE 2018 01.xlsx  OSEBERG 2024 09.xlsx  PAZFLOR 2015 02.xlsx  PEREGRINO 2024 11.xlsx  POSEIDON202507.xlsx  RONCADOR 20 2014 08.xlsx  RONCADOR 28 2011 06.xlsx  SATURNO 2022 10.xlsx  (+6 more)
Crude Assays (Total Energies)/: AKPO-BLEND.xlsx  AL-JURF.xlsx  AL-SHAHEEN.xlsx  AMENAM-BLEND.xlsx  ASGARD-BLEND.xlsx  ATAPU.xlsx  BADAK.xlsx  BEKAPAI.xlsx  BONGA.xlsx  BONNY-LIGHT.xlsx  BRASS-RIVER.xlsx  BRENT.xlsx  CABINDA.xlsx  CASCADE-CHINOOK-BLEND.xlsx  CLOV.xlsx  CONDENSATE-BONTANG-RETURN.xlsx  CONDENSATE-ICHTHYS.xlsx  CONDENSATE-SENIPAH.xlsx  CONDENSATE-SNOHVIT.xlsx  CULZEAN.xlsx  DALIA.xlsx  DAS-BLEND.xlsx  DJENO.xlsx  DUC.xlsx  DUMBARTON.xlsx  EA-BLEND.xlsx  EGINA.xlsx  EKOFISK.xlsx  EL-SHARARA.xlsx  ES-SIDER.xlsx  FLOTTA-GOLD.xlsx  FORCADOS.xlsx  FORT-HILLS-REDUCED-CARBON-LIFE-CYCLE-DILBIT.xlsx  FORTIES.xlsx  GINDUNGO.xlsx  GIRASSOL.xlsx  GRYPHON.xlsx  GUDRUN-BLEND.xlsx  GULLFAKS.xlsx  HANDIL-MIX.xlsx  (+18 more)
apps/admin/: middleware.ts  package.json  vercel.json
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/admin/lib/: audit-queries.ts  require-admin.ts  search-queries.ts  tenant-queries.ts  webhook-queries.ts
apps/app/: instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json  sentry.edge.config.ts  sentry.server.config.ts  vercel.json
apps/app/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  (+2 more)
apps/discover/: eslint.config.mjs  middleware.ts  next.config.ts  package.json  vercel.json
apps/marketing/: instrumentation-client.ts  next.config.ts  package.json  tsconfig.json  vercel.json
data/gain-reference-samples/: README.md  VE2026-0002_US-Venezuelan-Agricultural-Trade-Summary-2025.md
docs/: _status.md  agent-gamification-and-market-probe-teams-brief.md  apollo-integration-brief.md  architecture.md  assistant-tools-spec.md  assistant.md  buyer-intelligence-v2-free-sources-brief.md  caribbean-fuel-buyer-brief.md  data-graph-connections-brief.md  deal-structures-catalog-brief.md  environmental-services-rolodex-brief.md  feedback-ui-brief.md  gain-extraction-brief.md  intelligence-layers-brief.md  libyan-crude-buyer-brief.md  mcp-server-brief.md  multilateral-bank-docs-brief.md  panama-company-graph-brief.md  pricing-analytics-brief.md  procur-ml-layer-brief.md  supplier-graph-brief.md  venezuela-broker-meeting-prep.md  venezuela-contractor-intelligence.md  venezuela-counsel-briefing.md  venezuela-oilfield-waste-contractor-brief.md  vex-commercial-strategy-pointer.md  vex-integration.md  vex-into-procur-merge-brief.md  vex-into-procur-merge-decisions.md  vex-merge-smoke-tests.md  vex-origination-partners-pointer.md  vex-specialty-crude-30day-pointer.md  vex-specialty-crude-pointer.md  vex-tender-sourcing-pointer.md
services/ai-pipeline/: package.json  trigger.config.ts  tsconfig.json
services/email-digest/: package.json  trigger.config.ts  tsconfig.json
services/ml-tasks/: README.md  package.json  trigger.config.ts  tsconfig.json
services/ml-training/: .gitignore  README.md  pyproject.toml
services/ml-training/src/procur_ml/: __init__.py  bge_m3.py  bge_reranker.py  dataset.py  embed_entity.py  gliner_extract.py  model.py  outreach_ranker.py  train.py  upsert.py  validate.py
services/ml-training/tests/: qualitative_pairs.json
services/scrapers/: package.json  trigger.config.ts
services/voice-bridge/: .dockerignore  Dockerfile  README.md  fly.toml  package.json  tsconfig.json
(+664 files in other folders)
