[project]
name = "procur-ml-training"
version = "0.0.0"
description = "GraphSAGE training pipeline for procur's ML layer (Component B per docs/procur-ml-layer-brief.md §5)"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }

dependencies = [
    # Core ML — pin minimum versions, allow patch updates
    "torch>=2.4,<3.0",
    "torch-geometric>=2.6,<3.0",
    # Postgres write-back for trained embeddings
    "psycopg[binary]>=3.2,<4.0",
    # Experiment tracking — optional but brief recommends
    "mlflow>=2.16,<3.0",
    # Misc
    "click>=8.1,<9.0",
    "python-dotenv>=1.0,<2.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pyright>=1.1",
]

[project.scripts]
procur-ml-train = "procur_ml.train:main"
procur-ml-upsert = "procur_ml.upsert:main"
procur-ml-embed-entity = "procur_ml.embed_entity:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/procur_ml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "RET"]
ignore = ["E501"]  # ruff format handles line length
