[project]
name = "procur-ml-training"
version = "0.0.0"
description = "GraphSAGE training + BGE-M3 multilingual text embeddings for procur's ML layer"
requires-python = ">=3.10,<3.13"
license = { text = "Proprietary" }

dependencies = [
    # Core ML — pin minimum versions, allow patch updates.
    # PyTorch dropped Intel-macOS wheels at 2.3+; >=2.2 keeps the
    # x86_64 path working alongside arm64 / Linux GPU.
    "torch>=2.2,<3.0",
    "torch-geometric>=2.6,<3.0",
    # Postgres write-back for trained embeddings
    "psycopg[binary]>=3.2,<4.0",
    # Misc
    "click>=8.1,<9.0",
    "python-dotenv>=1.0,<2.0",
    # torch 2.2.x was compiled against NumPy 1.x ABI; loading it
    # under NumPy 2.x prints `_ARRAY_API not found` warnings and
    # risks tensor-numpy crashes on edge cases. Pin <2 until torch
    # ≥2.3 ships Intel-macOS wheels (currently it doesn't, see #443).
    "numpy>=1.26,<2.0",
]

[project.optional-dependencies]
# Optional: BGE-M3 multilingual embeddings. Pulled in via the
# `bge` extra so the GraphSAGE-only path doesn't drag transformers
# + huggingface_hub by default. Install with:
#   uv pip install -e .[bge]
bge = [
    # FlagEmbedding is BAAI's reference impl with first-class BGE-M3
    # + BGE-reranker support including the dense / sparse / multi-
    # vector heads. Pulls in transformers + tokenizers + accelerate
    # transitively.
    "FlagEmbedding>=1.3,<2.0",
]
# Experiment tracking — opt-in via `pip install -e .[mlflow]` since
# mlflow drags in pyarrow + sqlalchemy/greenlet, which need a working
# C++ toolchain to build on macOS. train.py imports it lazily and
# falls back to no-op tracking when absent.
mlflow = ["mlflow>=2.16,<3.0"]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pyright>=1.1",
]

[project.scripts]
procur-ml-train = "procur_ml.train:main"
procur-ml-upsert = "procur_ml.upsert:main"
procur-ml-embed-entity = "procur_ml.embed_entity:main"
procur-ml-validate = "procur_ml.validate:main"
procur-ml-bge-m3 = "procur_ml.bge_m3:main"
procur-ml-bge-reranker = "procur_ml.bge_reranker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/procur_ml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "RET"]
ignore = ["E501"]  # ruff format handles line length
